--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,25 @@ services:
     networks:
       - e_commerce_network
 
+  backend:
+    build: ./catalog
+    container_name: catalog_backend
+    restart: always
+    depends_on:
+      - mysql
+      - elasticsearch
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+      SPRING_ELASTICSEARCH_URIS: ${SPRING_ELASTICSEARCH_URIS}
+      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
+      CORS_ALLOWED_METHODS: ${CORS_ALLOWED_METHODS}
+    networks:
+      - e_commerce_network
+
 volumes:
   mysql_data:
 
