Finish Phase 3: Setup Deno Fresh Frontend with Docker (Still haven't configured backend security)

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ MYSQL_PASSWORD=
 ELASTICSEARCH_VERSION=8.11.0
 
 # Spring Boot Config
+BASE_BACKEND_URL=http://catalog-backend:8080
 SPRING_DATASOURCE_URL=
 SPRING_DATASOURCE_USERNAME=
 SPRING_DATASOURCE_PASSWORD=
