--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ SPRING_ELASTICSEARCH_URIS=http://elasticsearch:9200
 # CORS Config
 CORS_ALLOWED_ORIGINS=http://localhost:8000
 CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE
+
+# JWT
+JWT_SECRETE_KEY=
+JWT_EXPIRATION_TIME=
