--- a/catalog/src/main/resources/application.properties
+++ b/catalog/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.web.cors.allowed-methods=${CORS_ALLOWED_METHODS}
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 
+# JWT
+jwt.secrete-key=${JWT_SECRETE_KEY}
+jwt.expiration-time=${JWT_EXPIRATION_TIME}
