--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
       SPRING_ELASTICSEARCH_URIS: ${SPRING_ELASTICSEARCH_URIS}
       CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
       CORS_ALLOWED_METHODS: ${CORS_ALLOWED_METHODS}
+      JWT_SECRETE_KEY: ${JWT_SECRETE_KEY}
+      JWT_EXPIRATION_TIME: ${JWT_EXPIRATION_TIME}
     networks:
       - e_commerce_network
 
