Setup DSS with Docker and update some backend configuration on CORS

--- a/catalog/src/main/resources/application.properties
+++ b/catalog/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.elasticsearch.uris=${SPRING_ELASTICSEARCH_URIS}
 spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
 spring.web.cors.allowed-methods=${CORS_ALLOWED_METHODS}
 spring.web.cors.allowed-headers=*
+spring.web.cors.exposed-headers=Authorization
 spring.web.cors.allow-credentials=true
 
 # JWT
