RoleManager.ts update and BASE_URL redefine

--- a/frontend/deno.json
+++ b/frontend/deno.json
@@ -1,4 +1,5 @@
 {
+  "importMap": "../import_map.json",
   "lock": false,
   "tasks": {
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
